fix: enhance mega-menu layout for better responsiveness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -310,11 +310,14 @@ header .mega-menu .image img {
 
 header .mega-menu .links {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     min-width: 250px;
 }
 
 header .mega-menu .links li {
     position: relative;
+    flex: 1;
 }
 
 header .mega-menu .links li a i {
@@ -353,13 +356,14 @@ header .mega-menu .links li a:hover::before {
     header .container .mega-menu .image {
         display: none;
     }
-}
 
-@media (max-width:767px) {
     header .mega-menu {
         gap: 0;
         flex-direction: column;
         padding: 5px;
+        height: 100vh;
+        padding-bottom: 60px;
+        overflow: auto;
     }
 
     header .mega-menu .links li:last-of-type {
@@ -367,6 +371,11 @@ header .mega-menu .links li a:hover::before {
     }
 }
 
+@media (max-width:767px) {
+    header .mega-menu {
+        padding-bottom: 100px;
+    }
+}
 /* End Header */
 
 /* Start Landing */
